# s-mutt

./: #stdoutseektest.c#  .gitignore  Makefile  Makefile.am  Makefile.in  README.md  buildconf.yml  confcheck.h  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  depcomp  install-sh  install.mx  smutt  smutt-arm  smutt.c  smutt.c~  stdoutseektest  stdoutseektest.c  stdoutseektest.c~
.app/: config
.deps/: genconf.Po  smutt.Po
.hubcap/: config.yml
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
genconf/: .genconf.c.un~  .streamutils.h.swp  .streamutils.h.un~  bootstrap-trunk-x86_64-20181001.tar.gz.asc  check-shasum  core.10030  genconf  genconf.c  genconf.c~  listprop.h  listprop.h~  streamutils.h  streamutils.h~  strutils.h
pkgdir/: install.sh  smutt.genconf
